--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "stylelint-config-gooddata",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "GoodData CSS Style Guide",
   "main": ".stylelintrc",
+  "scripts": {
+    "test": "grunt test"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gooddata/gdc-css-style.git"
   },
-  "author": "ui@gooddata.com",
+  "author": "martin.cermak@gooddata.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "bugs": {
     "url": "https://github.com/gooddata/gdc-css-style/issues"
@@ -18,6 +21,18 @@
   },
   "dependencies": {
     "stylelint-checkstyle-formatter": "0.1.0",
-    "stylelint-config-standard": "15.0.1"
-  }
+    "stylelint-config-standard": "16.0.0",
+    "stylelint-order": "0.3.0"
+  },
+  "devDependencies": {
+    "grunt": "1.0.1",
+    "grunt-cli": "1.2.0",
+    "grunt-contrib-clean": "1.0.0",
+    "grunt-stylelint": "0.7.0",
+    "jest-cli": "18.1.0"
+  },
+  "keywords": [
+    "stylelint",
+    "config"
+  ]
 }
