--- a/.stylelintrc
+++ b/.stylelintrc
@@ -73,7 +73,7 @@
             "user-select",
             "pointer-events"
         ],
-        "selector-no-id": true,
+        "selector-max-id": 0,
         "string-quotes": "single",
         "value-keyword-case": "lower",
         "value-no-vendor-prefix": true
