--- a/.stylelintrc
+++ b/.stylelintrc
@@ -15,7 +15,7 @@
         "no-duplicate-selectors": true,
         "no-extra-semicolons": true,
         "no-unknown-animations": true,
-        "order/declaration-block-properties-specified-order": [
+        "order/properties-order": [
             "content",
 
             "position",
