--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "GoodData CSS Style Guide",
   "main": ".stylelintrc",
   "scripts": {
-    "test": "grunt test"
+    "test": "jest test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gooddata/gdc-css-style.git"
   },
-  "author": "martin.cermak@gooddata.com",
+  "author": "Nikola Cech <nikola.cech@gooddata.com>",
   "license": "SEE LICENSE IN LICENSE.txt",
   "bugs": {
     "url": "https://github.com/gooddata/gdc-css-style/issues"
@@ -21,15 +21,11 @@
   },
   "dependencies": {
     "stylelint-checkstyle-formatter": "0.1.0",
-    "stylelint-config-standard": "16.0.0",
-    "stylelint-order": "0.3.0"
+    "stylelint-config-standard": "17.0.0",
+    "stylelint-order": "0.6.0"
   },
   "devDependencies": {
-    "grunt": "1.0.1",
-    "grunt-cli": "1.2.0",
-    "grunt-contrib-clean": "1.0.0",
-    "grunt-stylelint": "0.9.0",
-    "jest-cli": "19.0.2"
+    "jest": "19.0.2"
   },
   "keywords": [
     "stylelint",
