--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,7 +1,8 @@
 {
     "extends": "stylelint-config-standard",
     "plugins": [
-        "stylelint-order"
+        "stylelint-order",
+        "stylelint-scss"
     ],
     "rules": {
         "block-closing-brace-newline-before": "always",
@@ -15,6 +16,8 @@
         "no-duplicate-selectors": true,
         "no-extra-semicolons": true,
         "no-unknown-animations": true,
+        "at-rule-no-unknown": null,
+        "scss/at-rule-no-unknown": true,
         "order/properties-order": [
             "content",
 
