--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "stylelint-checkstyle-formatter": "0.1.0",
     "stylelint-config-standard": "17.0.0",
-    "stylelint-order": "0.6.0"
+    "stylelint-order": "0.6.0",
+    "stylelint-scss": "2.0.1"
   },
   "devDependencies": {
     "jest": "19.0.2"
