--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "node": ">= 4"
   },
   "dependencies": {
+    "stylelint": "8.1.1",
     "stylelint-checkstyle-formatter": "0.1.0",
     "stylelint-config-standard": "17.0.0",
-    "stylelint-order": "0.6.0",
+    "stylelint-order": "0.7.0",
     "stylelint-scss": "2.0.1"
   },
   "devDependencies": {
