--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
   ],
   "homepage": "https://github.com/gooddata/gdc-css-style",
   "engines": {
-    "node": ">= 4"
+    "node": ">= 8.15.0"
   },
   "dependencies": {
-    "stylelint": "8.1.1",
-    "stylelint-checkstyle-formatter": "0.1.0",
-    "stylelint-config-standard": "17.0.0",
-    "stylelint-order": "0.7.0",
-    "stylelint-scss": "2.0.1"
+    "stylelint": "^12.0.1",
+    "stylelint-checkstyle-formatter": "^0.1.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.14.2"
   },
   "devDependencies": {
-    "jest": "19.0.2"
+    "jest": "^25.3.0"
   },
   "keywords": [
     "stylelint",
