FEATURE: FET-390 Move package under NPM @gooddata org
The move under the organization requires package to be scoped by "@gooddata/" prefix, i.e., the package must be renamed. The name was chosen to match our tslint and eslint package names. Additionally, the license and readme file was updated to match the latest standards approved by our Legal department.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stylelint-config-gooddata",
+  "name": "@gooddata/stylelint-config",
   "version": "3.0.1",
   "description": "GoodData CSS Style Guide",
   "main": ".stylelintrc",
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/gooddata/gdc-css-style.git"
   },
-  "author": "Nikola Cech <nikola.cech@gooddata.com>",
+  "author": "GoodData Corporation",
   "license": "SEE LICENSE IN LICENSE.txt",
   "bugs": {
     "url": "https://github.com/gooddata/gdc-css-style/issues"
