--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "node": ">= 4"
   },
   "dependencies": {
-    "stylelint": "8.1.1",
-    "stylelint-checkstyle-formatter": "0.1.0",
+    "stylelint": "8.4.0",
+    "stylelint-checkstyle-formatter": "0.1.2",
     "stylelint-config-standard": "17.0.0",
     "stylelint-order": "0.7.0",
-    "stylelint-scss": "2.0.1"
+    "stylelint-scss": "2.5.0"
   },
   "devDependencies": {
-    "jest": "19.0.2"
+    "jest": "^25.3.0"
   },
   "keywords": [
     "stylelint",
