RELATED: SPACE-2092 Add NOTICE.txt to package.json files to be bundled to npm package

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "url": "https://github.com/gooddata/gdc-css-style/issues"
   },
   "files": [
-    ".stylelintrc"
+    ".stylelintrc",
+    "NOTICE.txt"
   ],
   "homepage": "https://github.com/gooddata/gdc-css-style",
   "engines": {
