--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/gooddata/gdc-css-style.git"
   },
   "author": "GoodData Corporation",
-  "license": "SEE LICENSE IN LICENSE.txt",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/gooddata/gdc-css-style/issues"
   },
